--- a/Projects/Local_Storage/style.css
+++ b/Projects/Local_Storage/style.css
@@ -1,5 +1,7 @@
 html,body{
     padding-left: 20px ;
+    background-color: rgb(0, 0, 40);
+    color: white;
 }
 li:first-child{
     font-size: 20px;
@@ -8,6 +10,7 @@ li:first-child{
 }
 button{
     cursor: pointer;
+    margin: 10px 65px ;
 }
 .box{
     height: min-content;
@@ -18,9 +21,38 @@ button{
     padding: 4px 5px;
     margin: 3px 0px;
 }
+.massage{
+    color: rgb(255, 18, 18);
+    margin: 3px;
+    font-size: 12px;
+    font-weight: 700;
+}
 .delete{
     margin: 0px 10px;
    height: 30px;
+}
+p{
+    font-family: sans-serif;
+    font-size: 25px;
+}
+ul{
+    display: flex;
+    flex-wrap: wrap;
+}
+li{
+    position: relative;
+    width: 100px;
+    height: 100px;
+    border: 2px solid white;
+    margin: 20px;
+    list-style: none;
+}
+.delete{
+    position: absolute;
+    border-radius: 5px;
+    bottom: -20px;
+    left: 80%;
+    transform: translate(-50%);
 }
 .iteam{
     width: min-content;
